--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Flexx</title>
+  <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
+  <h1>This is my title</h1>
+  <div class="navbar"></div>
+
+  <script>
+    fetch('./components/navbar.html')
+      .then(res => res.text())
+      .then(data => {
+        document.querySelector('.navbar').innerHTML = data
+      })
+      .catch(error => console.error("Error loading component: ", error))
+  </script>
   
 </body>
 </html>
